	$Id$
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2011-08-25	pwessel
	GMT 5.0.0b finalized and released.
-----------------------------------------------------------------------------------------

2011-08-23	remko
	* *_tests.sh:		Now using graphicsmagick instead of imagemagick for compare.
	
2011-08-23	pwessel
	* guru/install_gmt.sh:	Now offers option to set PCRE libs or disable.
	* gmt_init.c:		New parameter GMT_TRIANGULATE which selects the triangulation
				algorithm to use (Watson or Shewchuk). The latter is only
				available if --enable-triangle was used during configuration.
				
2011-08-20	pwessel
	* psrose_func.c:	The -C with no file still looked for a file.
				do_fill was not initialized, could case black fill.
				Baseframe was not drawn when -B was set.
	* test/psrose:		Added test script for psrose

2011-08-17	jluis
	* gmtconvert_func.c:	Added (optional) PCRE support on Windows.
	* gmtinstall.bat:			" "

2011-08-11	pwessel
	* gmtmath_func.c:	The EXCH should just swap data set pointers.
	* grdblend_func.c:	Pass -R to grdsample/grdreformat to only deal with smallest region.
	* mapproject_func.c:	Using just -Gc on Cartesian data now leaves coordinates alone.

2011-08-11	remko
	* gmtconvert_func.c, configure.ac:	Added PCRE (regular expression) support.
				Thanks to Florian Wobbe.

2011-08-02	pwessel
	* gmt_fft.c:		Started groundwork to enable FFTW, Accelerate framework,
				Sun Performance library, and FFT Pack configurations.
	* gmt.conf:		New parameter GMT_FFT which selects what FFT implementation
				to use in programs like spectrum1d and grdfft.

2011-07-28	pwessel
	* gmt_support.c:	Pens like brown,- (i.e., no width) did not set the color.

2011-07-27	pwessel
	* gmt_io.c:		Ensure that comment records that are written always start with #

2011-07-27	remko