@@ -1,9 +1,9 @@
-#if @SVN_VERSION@
-#define GMT_VER_SVN " (SVN "__DATE__" "__TIME__")"
+#define SVN_VERSION @SVN_VERSION@
+#define PACKAGE_VERSION "@PACKAGE_VERSION@"
+#if SVN_VERSION
 #define GMT_STRING "@PACKAGE_STRING@ (SVN)"
 #define MANDATE __DATE__
 #else
-#define GMT_VER_SVN ""
 #define GMT_STRING "@PACKAGE_STRING@"
 #define MANDATE "@MANDATE@"
 #endif
@@ -27,7 +27,7 @@
 #else
 #define GMT_VER_COMPAT ""
 #endif
-#define GMT_VERSION "@PACKAGE_VERSION@" GMT_VER_SVN GMT_VER_64 GMT_VER_COMPAT
+#define GMT_VERSION GMT_version()
 #define GMT_MAJOR_VERSION @GMT_MAJOR_VERSION@
 #define GMT_MINOR_VERSION @GMT_MINOR_VERSION@
 #define GMT_RELEASE_VERSION @GMT_RELEASE_VERSION@
