@@ -7,7 +7,8 @@
 	GMT 5.0.0b finalized and released.
 -----------------------------------------------------------------------------------------
 
-2011-08-23	remko
+2011-08-24	remko
+	* gmt_version.c:	Introduced new function GMT_version() to generate version number.
 	* *_tests.sh:		Now using graphicsmagick instead of imagemagick for compare.
 	
 2011-08-23	pwessel
